client/src/pages/gallery-type/gallery-type.component.scss
:host {
  display: block;
  width: 100%;
  background-color: var(--LATTE);
}

// menu logic
.menu_container {
  width: 100%;
  display: flex;
  justify-content: center;
  background-color: var(--TOFFEE);
  padding: 0;
  margin: 0;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 3;
}

nav {
  width: 100%;
  max-width: 1300px;
  display: flex;
  justify-content: flex-end;
  display: flex;
  padding: 2rem 1rem 1rem 2rem;
}

a {
  all: unset;
  cursor: pointer;
  color: var(--LATTE);
  font-size: 1.1rem;
}

a:not(:last-of-type) {
  margin-right: 1rem;
}

.activeLink {
  color: var(--LATTE);
  text-decoration: line-through;
}

// container logic
.gallery-container {
  width: 100%;
  max-width: 2500px;
  margin: 0 auto;
  padding-bottom: 10rem;
}


.title-for-gallery {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100dvh;
  display: flex;
  position: relative;
  overflow: hidden;

  img {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  h1 {
    position: absolute;
    left: 25px;
    bottom: 25px;
    margin: 0;
    color: var(--LATTE);
    font-size: 3rem;
  }
}

.adjusted-title {
  object-position: 75%;
}

.pregnancy-title {
  object-position: 25%;
}

.image-grid {
  column-count: 3;
  gap: 0.5rem;
  padding: 3rem 0.5rem 0;
}

.image-card {
  padding: 0.3rem 0;

  img {
    max-width: 100%;
    height: auto;
  }
}

.error-message {
  width: 100%;
  display: flex;
  justify-content: center;
  text-align: center;
  padding: 0 2rem;
  color: var(--DANGER-SMOOTH);
  font-size: 1.2rem;
}

// smaller screens
@media screen and (max-width: 1366px) {
  .image-grid {
    column-count: 2;
  }
}

@media screen and (max-width: 700px) {
  .image-grid {
    column-count: 1;
  }

  .title-for-gallery {

    h1 {
      font-size: 2.25rem;
    }
  }
}

// bigger screens
@media screen and (min-width: 2100px) {
  .image-grid {
    column-count: 4;
  }
}

